Fixed compilation error in EglTask